Bug 109123 - UI is locked after formula/chart insert
Summary: UI is locked after formula/chart insert
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: All Windows (All)
: medium major
Assignee: Not Assigned
URL:
Whiteboard: target:6.0.0
Keywords: bibisected, regression
: 109148 109150 109183 (view as bug list)
Depends on:
Blocks: VCL-Scheduler
  Show dependency treegraph
 
Reported: 2017-07-14 15:51 UTC by Szymon Kłos
Modified: 2017-07-29 04:19 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Szymon Kłos 2017-07-14 15:51:22 UTC
Steps to reproduce:

1. Open new document in the Writer
2. Insert -> Chart   or    Insert -> Object -> Formula

What happens:
UI is locked (but not greyed out), no respond from buttons etc.
I also noticed that when I clicked using right mouse button on the LO icon on the task bar and selected "close window", dialog asking for save appeared but also was locked.

I think LO is not hanging but stopped to respond on user input.

Version: 6.0.0.0.alpha0+
Build ID: a2e670df4efb219a1f92946d7a2887bdd0f88f5d
TinderBox: Win-x86@42, Branch:master, Time: 2017-07-13_23:50:53
Locale: pl-PL (pl_PL); Calc: group
Comment 1 Xisco Faulí 2017-07-14 16:10:31 UTC
I can't reproduce it in

Version: 6.0.0.0.alpha0+
Build ID: ddadcb4f4a2bc6538c219a0a577bdf5999015150
CPU threads: 4; OS: Linux 4.8; UI render: default; VCL: x11; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

same with gtk and gtk3
Comment 2 Aron Budea 2017-07-14 16:16:35 UTC
Confirmed using same daily build / Windows 7.
Still working fine with a master build from 07-07 ( 3329d2205ed3246c56da1bd859acaaf590dd6e71). => regression

It didn't occur with a Linux daily build from last night, so it seems to be a Windows-only bug.
Comment 3 Aron Budea 2017-07-15 06:39:27 UTC
Still good in daily build from 07-11 04:22 (4bd2e2931efbe31a5b112fec1556af17bb446163).
Comment 4 Aron Budea 2017-07-17 00:21:24 UTC
Still good:
2017-07-13_05:02:25 d9e8fdbcd2f834a483890b409ede1b44c2da5da3

This is the range, then:
https://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=d9e8fdbcd2f834a483890b409ede1b44c2da5da3..a2e670df4efb219a1f92946d7a2887bdd0f88f5d

It's interesting that only Writer is affected, Calc isn't.
Comment 5 Aron Budea 2017-07-17 18:18:36 UTC
Further restricted range to the following scheduler-related commits:
https://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=dc63cc326ee5757124cef45e470d290e6e32002e..1b9d48f59e8a04c3b9d829e150a59fc88084445b

Jan-Marek, please take a look!
Comment 6 Commit Notification 2017-07-20 08:28:27 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d7a2fd3e8262b8897ad06f01f25f46330e050e0c

tdf#109123 Change SwDocIdle base class to Idle

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2017-07-20 15:55:56 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=37436815970b14f8940fc0c547862452a2dc3e1e

tdf#109123 WIN Run instant timerout with low priority

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Jan-Marek Glogowski 2017-07-20 17:39:14 UTC
*** Bug 109183 has been marked as a duplicate of this bug. ***
Comment 9 Jan-Marek Glogowski 2017-07-21 07:56:51 UTC
*** Bug 109150 has been marked as a duplicate of this bug. ***
Comment 10 Telesto 2017-07-21 09:34:34 UTC
*** Bug 109148 has been marked as a duplicate of this bug. ***
Comment 11 Timur 2017-07-21 16:09:12 UTC
Looking at duplicates here, are some other related? 
Bug 108005 and those in Seel Also.