tdf#109123 Change SwDocIdle base class to Idle

This hides SwDocIdle from SalInstance::AnyInput( VCL_INPUT_ANY )
on Windows. Otherwise Writer assumes there is more stuff to do, as
it can't know the scheduled Windows event is just for itself,
resulting in a busy loop, which freezes Writer.

Reviewed-on: https://gerrit.libreoffice.org/40189
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Jan-Marek Glogowski <glogow@fbihome.de>

 Conflicts:
	sw/source/core/doc/DocumentStatisticsManager.cxx

Change-Id: I919c40e8e1673eb09a69a3084203d1c4a6ecac8a